--- a/www/www/blog.html
+++ b/www/www/blog.html
@@ -20,8 +20,10 @@
         <!-- module/headnav.html -->
     </div>
     <div id="main">
-        Coming Soon...
+        <!-- /upload/xml/blog.xml -->
     </div>
-    
+    <script>
+loadXMLDoc("/upload/xml/blog.xml","blog_main&list");
+    </script>
 </body>
 </html>
