--- a/www/index.html
+++ b/www/index.html
@@ -2,10 +2,9 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta http-equiv="Refresh" content="0;url=http://www.armlfs.org/www">
     <title></title>
 </head>
 <body>
-    Hello Seven!
+    <h2>This is develop site.</h2>
 </body>
 </html>
