--- a/www/www/admin/index.html
+++ b/www/www/admin/index.html
@@ -10,8 +10,8 @@
     <script src="js/script.js"></script>
 </head>
 <body>
-    <form method="post" 
-        action="http://file.armlfs.org/services/say.php">
+    <form method="post"
+        action="//file.armlfs.org/services/say.php">
         <textarea id="say" name="say"></textarea>
         <input type="submit" value="Submit">
     </form>
