--- a/www/index.html
+++ b/www/index.html
@@ -2,9 +2,28 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title></title>
+    <meta name="viewport" 
+          content="width=device-width,user-scalable=no">
+    <title>Home page of armlfs</title>
+    <link rel="stylesheet" href="css/reset.css">
+    <link rel="stylesheet" href="css/common.css">
+    <script src="js/loadXMLDoc.js"></script>
+    <script src="js/script.js"></script>
 </head>
 <body>
-    <h2>This is develop site.</h2>
+    <div class="header">
+        <h2>Home Page</h2>
+        <span>armlfs</span>
+        <div class="clear"></div>
+    </div>
+    <div id="headnav">
+        <!-- module/headnav.html -->
+    </div>
+    <div id="main">
+        <!-- /upload/xml/say.xml -->
+    </div>
+    <script>
+loadXMLDoc("/upload/xml/say.xml", "index_main");
+    </script>
 </body>
 </html>
